--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -11,14 +11,11 @@ sites:
     url: https://support.ga-navigate.com/
 
 status-website:
-  # Add your custom domain name, or remove the `cname` line if you don't have a domain
-  # Uncomment the `baseUrl` line if you don't have a custom domain and add your repo name there
-  # cname: demo.upptime.js.org
   baseUrl: /status-navigate
   logoUrl: https://raw.githubusercontent.com/upptime/upptime.js.org/master/static/img/icon.svg
   name: Navigate
-  introTitle: "**Upptime** is the open-source uptime monitor and status page, powered entirely by GitHub."
-  introMessage: This is a sample status page which uses **real-time** data from our [GitHub repository](https://github.com/upptime/upptime). No server required — just GitHub Actions, Issues, and Pages. [**Get your own for free**](https://github.com/upptime/upptime)
+  introTitle: "**Navigate Services Status**"
+  introMessage: "**Welcome to Navigate's Realtime status Page**" 
   navbar:
     - title: Status
       href: /
